--- a/PdfTools/App.xaml
+++ b/PdfTools/App.xaml
@@ -1,9 +1,22 @@
 ﻿<Application x:Class="PdfTools.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:PdfTools"
-             StartupUri="MainWindow.xaml">
+             xmlns:local="clr-namespace:PdfTools">
     <Application.Resources>
-         
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary
+                    Source="pack://application:,,,/JMI.General.View.WPF;component/Resources/ControlTemplates.xaml" />
+                <ResourceDictionary
+                    Source="pack://application:,,,/JMI.General.View.WPF;component/Resources/DataTemplates.xaml" />
+                <ResourceDictionary
+                    Source="pack://application:,,,/JMI.General.View.WPF;component/Resources/Styles.xaml" />
+                <ResourceDictionary
+                    Source="UI/ViewTemplates.xaml" />
+            </ResourceDictionary.MergedDictionaries>
+            <SolidColorBrush
+                x:Key="ApplicationColor"
+                Color="DarkGray" />
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
